<resources>
  <string name="app_name">ZEGO Call</string>
  <string name="login_page_title">Welcome to experience \n ZEGO Call</string>
  <string name="login_page_user_name">Please enter your user name</string>
  <string name="login_page_login">Log in</string>
  <string name="toast_login_fail">Failed to log in. Error code: %d.</string>
  <string name="login_page_input_user_name_tip">Username can only contain letters and numbers.</string>
  <string name="setting_page_settings">Settings</string>
  <string name="setting_page_sdk_version">Express SDK Version</string>
  <string name="setting_page_zim_sdk_version">ZIM SDK Version</string>
  <string name="setting_page_version">App Version</string>
  <string name="setting_page_terms_of_service">Terms of service</string>
  <string name="setting_page_privacy_policy">Privacy Policy</string>
  <string name="setting_page_upload_log">Upload Logs</string>
  <string name="toast_upload_log_success">Logs uploaded successfully.</string>
  <string name="toast_upload_log_fail">Failed to upload logs. Error code: %d.</string>
  <string name="setting_page_logout">Log out</string>
  <string name="toast_logout_fail">Failed to log out. Error code: %d.</string>
  <string name="network_reconnect">Network error. Reconnecting...</string>
  <string name="network_connect_failed">Network connection failed. Please re-login and try again.</string>
  <string name="network_connect_failed_title">Network error.</string>
  <string name="dialog_tips_title">Note</string>
  <string name="dialog_login_page_mic_cant_open">The Mic is off.</string>
  <string name="dialog_login_page_mic_permission">Please allow access to your microphone to continue.</string>
  <string name="dialog_login_page_go_to_settings">Go to Settings</string>
  <string name="dialog_login_page_title_cannot_use_camera">The Camera is off.</string>
  <string name="dialog_login_page_massage_cannot_use_camera">Please allow access to your camera to continue.</string>
  <string name="dialog_login_page_cancel">Cancel</string>
  <string name="dialog_login_page_ok">OK</string>
  <string name="welcome_page_user_name">Username</string>
  <string name="welcome_page_user_id">User ID</string>
  <string name="welcome_page_contact_us">Contact us</string>
  <string name="welcome_page_get_more">Get more</string>
  <string name="zego_call">ZEGO Call</string>
  <string name="banner_call_desc">Deliver exceptional real-time voice and video communications regardless of distance</string>
  <string name="back">Back</string>
  <string name="online">Online</string>
  <string name="no_online_user">No Online User</string>
  <string name="call_page_action_accept">Accept</string>
  <string name="call_page_action_decline">Decline</string>
  <string name="zego_voice_call">ZEGO Voice Call</string>
  <string name="zego_video_call">ZEGO Video Call</string>
  <string name="float_permission_tips">Please allow popup permission to receive incoming calls.</string>
  <string name="call_page_status_calling">Calling...</string>
  <string name="call_page_status_canceled">Canceled</string>
  <string name="call_page_status_completed">Completed</string>
  <string name="call_page_status_missed">Missed</string>
  <string name="call_page_status_declined">Declined</string>
  <string name="call_notification">On the line with %s. Tap here to go back.</string>
  <string name="receive_call_notification">%s is calling you. Tap here to check.ap here to go back.</string>
  <string name="request_call_notification">You are calling %s. Tap here to check.</string>
  <string name="call_page_call_fail">Call failed. Error code: %d.</string>
  <string name="call_page_call_quality_poor">Poor call quality...</string>
  <string name="call_page_call_disconnected">The call has dropped. Please wait.</string>
  <string name="mic_operate_failed">enable micPhone failed,errorCode: %d</string>
  <string name="camera_operate_failed">enable camera failed,errorCode: %d</string>
  <string name="cancel_call_failed">cancel call Failed,errorCode:%d</string>
  <string name="end_call_failed">End call Failed,errorCode:%d</string>
  <string name="me">Me</string>
  <string name="loading">loading...</string>



  <string name="toast_kickout_error">This account has already logged in from another device.</string>
  <string name="create_user_failed">create user failed,errorCode :%d</string>
  <string name="get_user_list_failed">get user list failed,errorCode :%d</string>
  <string name="response_failed">response failed,errorCode: %d</string>
</resources>