<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="#F3F4F7"
  android:orientation="vertical"
  tools:context=".ui.setting.SettingActivity">

  <RelativeLayout
    android:id="@+id/setting_title_layout"
    android:layout_width="match_parent"
    android:layout_height="44dp"
    android:background="@color/white"
    app:layout_constraintTop_toTopOf="parent">

    <ImageView
      android:id="@+id/setting_title_back"
      android:layout_width="33dp"
      android:layout_height="33dp"
      android:layout_centerVertical="true"
      android:layout_marginStart="7dp"
      android:src="@drawable/setting_back" />

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerInParent="true"
      android:text="@string/setting_page_settings"
      android:textColor="#2A2A2A"
      android:textSize="18sp" />
  </RelativeLayout>

  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="54dp"
    android:layout_marginTop="12dp"
    android:background="@color/white">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentStart="true"
      android:layout_centerVertical="true"
      android:layout_marginStart="16dp"
      android:text="@string/setting_page_sdk_version"
      android:textColor="#2A2A2A"
      android:textSize="15sp" />

    <TextView
      android:id="@+id/express_sdk_version"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentEnd="true"
      android:layout_centerInParent="true"
      android:layout_marginEnd="16dp"
      android:textColor="#A4A4A4"
      android:textSize="14sp" />
  </RelativeLayout>

  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="54dp"
    android:layout_marginTop="1dp"
    android:background="@color/white">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentStart="true"
      android:layout_centerVertical="true"
      android:layout_marginStart="16dp"
      android:text="@string/setting_page_zim_sdk_version"
      android:textColor="#2A2A2A"
      android:textSize="15sp" />

    <TextView
      android:id="@+id/zim_sdk_version"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentEnd="true"
      android:layout_centerInParent="true"
      android:layout_marginEnd="16dp"
      android:textColor="#A4A4A4"
      android:textSize="14sp" />
  </RelativeLayout>

  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="54dp"
    android:layout_marginTop="1dp"
    android:background="@color/white">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentStart="true"
      android:layout_centerVertical="true"
      android:layout_marginStart="16dp"
      android:text="@string/setting_page_version"
      android:textColor="#2A2A2A"
      android:textSize="15sp" />

    <TextView
      android:id="@+id/app_version"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentEnd="true"
      android:layout_centerInParent="true"
      android:layout_marginEnd="16dp"
      android:textColor="#A4A4A4"
      android:textSize="14sp" />
  </RelativeLayout>

  <TextView
    android:id="@+id/terms_service"
    android:layout_width="match_parent"
    android:layout_height="54dp"
    android:layout_marginTop="12dp"
    android:background="@color/white"
    android:gravity="center_vertical"
    android:paddingStart="16dp"
    android:text="@string/setting_page_terms_of_service"
    android:textColor="#2A2A2A"
    android:textSize="15sp" />

  <TextView
    android:id="@+id/privacy_policy"
    android:layout_width="match_parent"
    android:layout_height="54dp"
    android:layout_marginTop="1dp"
    android:background="@color/white"
    android:gravity="center_vertical"
    android:paddingStart="16dp"
    android:text="@string/setting_page_privacy_policy"
    android:textColor="#2A2A2A"
    android:textSize="15sp" />

  <TextView
    android:id="@+id/upload_log"
    android:layout_width="match_parent"
    android:layout_height="54dp"
    android:layout_marginTop="12dp"
    android:background="@color/white"
    android:gravity="center_vertical"
    android:paddingStart="16dp"
    android:text="@string/setting_page_upload_log"
    android:textColor="#2A2A2A"
    android:textSize="15sp" />

  <TextView
    android:id="@+id/log_out"
    android:layout_width="match_parent"
    android:layout_height="54dp"
    android:layout_marginTop="40dp"
    android:background="@color/white"
    android:gravity="center"
    android:text="@string/setting_page_logout"
    android:textColor="#FF4A50"
    android:textSize="15sp" />
</LinearLayout>