<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".ui.login.LoginActivity">

  <ImageView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scaleType="fitXY"
    android:src="@drawable/login_background"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/welcome_text"
    android:layout_width="210dp"
    android:layout_height="80dp"
    android:layout_marginStart="18dp"
    android:layout_marginTop="74dp"
    android:text="@string/login_page_title"
    android:textColor="@color/white"
    android:textSize="28sp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_marginTop="190dp"
    android:background="@drawable/round_rect_bg_login"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <EditText
      android:id="@+id/login_username"
      android:layout_width="301dp"
      android:layout_height="50dp"
      android:layout_gravity="center_horizontal"
      android:layout_marginTop="48dp"
      android:background="@drawable/round_rect_bg_input_button"
      android:ellipsize="end"
      android:gravity="center_vertical"
      android:hint="@string/login_page_user_name"
      android:maxLength="16"
      android:maxLines="1"
      android:paddingStart="17dp"
      android:singleLine="true"
      android:textColorHint="#A4A4A4"
      android:textSize="16sp" />

    <TextView
      android:id="@+id/login_input_tips"
      android:layout_width="301dp"
      android:layout_height="28dp"
      android:layout_gravity="center"
      android:gravity="center_vertical"
      android:textColor="#FF4A50"
      android:textSize="12sp" />

    <Button
      android:id="@+id/login_button"
      android:layout_width="301dp"
      android:layout_height="50dp"
      android:layout_gravity="center_horizontal"
      android:background="@drawable/selector_submit_button"
      android:text="@string/login_page_login"
      android:textColor="@color/white"
      android:textSize="16sp" />
  </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>